<resources>
    <string name="app_name">Mobil Programlama</string>
    <string name="email_edit_text_hint">E-mail address</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="signup_button">SIGNUP</string>
    <string name="name_edit_text_hint">Name</string>
    <string name="surname_edit_text_hint">Surname</string>
    <string name="phone_number_edit_text_hint">+12345678901</string>
    <string name="reenter_password_edit_text_hint">Re-Enter password</string>
    <string name="birth_date_edit_text_hint">DD/MM/YYYY</string>
    <string name="birth_date_spinner_title">Birth Date</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_text"><u>Login</u></string>
    <string name="add_question_button">Add</string>
    <string name="question_edit_text_hint">Question</string>
    <string name="option_a_edit_text_hint">Option A</string>
    <string name="option_b_edit_text_hint">Option B</string>
    <string name="option_c_edit_text_hint">Option C</string>
    <string name="option_d_edit_text_hint">Option D</string>
    <string name="option_a">A)</string>
    <string name="option_b">B)</string>
    <string name="option_c">C)</string>
    <string name="option_d">D)</string>
    <string name="option_e">E)</string>
    <string name="option_e_edit_text_hint">Option E</string>
    <string name="attach_button_text">Attach</string>
    <string name="correct_option_text">Correct option</string>
    <string name="questions">Questions</string>
    <string name="button_hide_text">Hide</string>
    <string name="button_show_text">Show</string>
    <string name="signup_attach_text">ADD PHOTO</string>
    <string name="users">Users</string>
    <string name="birth_date_text_view">Birth Date</string>
    <string name="email_text_view">Email Address</string>
    <string name="phone_number_text_view">Phone Number</string>
    <string name="reenter_password_text_view">Re-Enter Pasword</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Log out</string>
    <string name="edit_button">EDIT</string>
    <string name="delete_button">DELETE</string>
    <string name="add_question">Add Question</string>
    <string name="list_questions">List Questions</string>
    <string name="exam_prefs">Exam Preferences</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exam_duration_hint">Exam duration in minutes</string>
    <string name="exam_duration">Exam Duration</string>
    <string name="question_points_hint">Points per question</string>
    <string name="question_points">Question Points</string>
    <string name="question_difficulty">Question Difficulty</string>
    <string name="save_exam_prefs">SAVE</string>
    <string name="load_questions">LOAD QUESTIONS</string>
    <string name="add_exam">Create Exam</string>
    <string name="create_exam">CREATE EXAM</string>
</resources>