<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="tr.edu.yildiz.mehmethayricakir.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add_question"
        android:name="tr.edu.yildiz.mehmethayricakir.ui.addquestion.AddQuestionFragment"
        android:label="@string/add_question"
        tools:layout="@layout/fragment_gallery">
    </fragment>

    <fragment
        android:id="@+id/nav_list_questions"
        android:name="tr.edu.yildiz.mehmethayricakir.ui.listquestions.ListQuestionsFragment"
        android:label="@string/list_questions"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_exam_prefs"
        android:name="tr.edu.yildiz.mehmethayricakir.ui.exampreferences.ExamPreferencesFragment"
        android:label="@string/exam_prefs"
        tools:layout="@layout/fragment_exam_preferences"/>

    <fragment
        android:id="@+id/nav_add_exam"
        android:name="tr.edu.yildiz.mehmethayricakir.ui.addexam.AddExamFragment"
        android:label="@string/add_exam"
        tools:layout="@layout/fragment_add_exam"/>

</navigation>