<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp"
    android:gravity="center"
    tools:context="tr.edu.yildiz.mehmethayricakir.AddQuestionActivity">


    <EditText
        android:id="@+id/question_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/question_edit_text_hint"
        android:maxLines="5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_a"
            android:textSize="20sp"
            android:textColor="@color/pumpkin"/>
        <EditText
            android:id="@+id/option_a_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textSize="20sp"
            android:hint="@string/option_a_edit_text_hint"
            android:maxLines="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_b"
            android:textSize="20sp"
            android:textColor="@color/pumpkin"/>
        <EditText
            android:id="@+id/option_b_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textSize="20sp"
            android:hint="@string/option_b_edit_text_hint"
            android:maxLines="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_c"
            android:textSize="20sp"
            android:textColor="@color/pumpkin"/>
        <EditText
            android:id="@+id/option_c_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textSize="20sp"
            android:hint="@string/option_c_edit_text_hint"
            android:maxLines="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_d"
            android:textSize="20sp"
            android:textColor="@color/pumpkin"/>
        <EditText
            android:id="@+id/option_d_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textSize="20sp"
            android:hint="@string/option_d_edit_text_hint"
            android:maxLines="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_e"
            android:textSize="20sp"
            android:textColor="@color/pumpkin"/>
        <EditText
            android:id="@+id/option_e_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textSize="20sp"
            android:hint="@string/option_e_edit_text_hint"
            android:maxLines="2"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/correct_option_text"
        android:gravity="center"
        android:textSize="25sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/correct_option_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:checkedButton="@id/radio_button_option_a">
            <RadioButton
                android:id="@+id/radio_button_option_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/pumpkin"
                android:text="@string/option_a"
                android:paddingEnd="5dp"
                android:paddingStart="0dp"/>
            <RadioButton
                android:id="@+id/radio_button_option_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/pumpkin"
                android:text="@string/option_b"
                android:paddingEnd="5dp"
                android:paddingStart="0dp"/>
            <RadioButton
                android:id="@+id/radio_button_option_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/pumpkin"
                android:text="@string/option_c"
                android:paddingEnd="5dp"
                android:paddingStart="0dp"/>
            <RadioButton
                android:id="@+id/radio_button_option_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/pumpkin"
                android:text="@string/option_d"
                android:paddingEnd="5dp"
                android:paddingStart="0dp"/>
            <RadioButton
                android:id="@+id/radio_button_option_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/pumpkin"
                android:text="@string/option_e"
                android:paddingEnd="5dp"
                android:paddingStart="0dp"/>

        </RadioGroup>
    </LinearLayout>
    <TextView
        android:id="@+id/attached_file_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="60dp"
        android:text=""
        android:textSize="12sp"/>
    <Button
        android:id="@+id/attach_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:drawableLeft="@drawable/attach"
        android:paddingLeft="35dp"
        android:text="@string/attach_button_text"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="30sp"
        android:textAlignment="textStart"/>

    <Button
        android:id="@+id/add_question_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:textSize="30sp"
        android:text="@string/add_question_button"
        android:fontFamily="sans-serif-condensed-light"/>
</LinearLayout>