<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="35dp"
    android:gravity="center"
    tools:context="tr.edu.yildiz.mehmethayricakir.MainActivity">


    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/email_edit_text_hint"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/password_edit_text_hint"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="15dp"
        android:textSize="30sp"
        android:text="@string/login_button"
        android:fontFamily="sans-serif-condensed-light"/>
    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:textSize="30sp"
        android:text="@string/signup_button"
        android:fontFamily="sans-serif-condensed-light"/>
</LinearLayout>