<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:layout_gravity="start">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exam_duration"
                android:textSize="15sp"
                android:textColor="@color/carrot"/>
            <EditText
                android:id="@+id/exam_duration_in_minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint="@string/exam_duration_hint"
                android:gravity="center"
                android:inputType="number"
                android:layout_weight="0.60"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/question_points"
                android:textSize="15sp"
                android:textColor="@color/carrot"/>
            <EditText
                android:id="@+id/question_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint="@string/question_points_hint"
                android:gravity="center"
                android:inputType="number"
                android:layout_weight="0.60"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.95"
                android:text="@string/question_difficulty"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@color/carrot"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/question_difficulty_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/question_difficulty_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:text="5"/>
        </LinearLayout>
        <Button
            android:id="@+id/save_exam_prefs_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp"
            android:textSize="20sp"
            android:text="@string/load_questions"
            android:fontFamily="sans-serif-condensed-light"/>
        <Button
            android:id="@+id/create_exam_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:textSize="20sp"
            android:text="@string/create_exam"
            android:fontFamily="sans-serif-condensed-light"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#59000000"/>
        </LinearLayout>
</ScrollView>