<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/user_image"
            android:layout_width="64dp"
            android:layout_height="64dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:text="@string/email_edit_text_hint"/>
                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:textColor="@color/orange"
                    android:layout_height="match_parent"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:text="@string/password_edit_text_hint"/>
                <TextView
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:textColor="@color/pumpkin"
                    android:layout_height="match_parent"
                    android:textSize="14sp"/>
                <ToggleButton
                    android:id="@+id/show_hide_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textOn="@string/button_hide_text"
                    android:textOff="@string/button_show_text"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>